--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Halloween Fliko - Landing page clone by saqib aziz"
     />
-    <title>Hallween Fliko - A token ready for the season</title>
+    <title>Halloween Fliko - A token ready for the season</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
